# v1-exercise-3-and-4

./: README.md  runtime2.rs  template2.rs
node/: Cargo.toml
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
submission/: README.md
